# libtg

./: .gitignore  ChangeLog  Makefile.am  NEWS  README.md  config.h  config.h.in  config.status  configure.ac  libtg.h  test.c
crypto/: cmn.c  cry.c  cry.h  hsh.c  rsa.c
mtproto2/: trl.c
mtx/: .Makefile.am.un~  .Makefile.un~  .pub1.pkcs.un~  .schema.swp  .schema.un~  Makefile  Makefile.am  Makefile.in  Makefile.sav  compile_commands.json  libmtx.la  mtx
mtx/.libs/: libmtx.la  libmtx.lai  libmtx.so.0  libmtx.so.0.0.0  mtx
mtx/include/: .api.h.un~  .log.h.un~  .macro.h.un~  .sel.h.un~  .setup.h.un~  .srl.h.un~  .tgt.h.un~  .tml.h.un~  api.h  buf.h  hsh.h  net.h  sel.h  setup.h  srl.h  tgt.h  tml.h  types.h
mtx/src/: .aes.c.un~  .api.c.un~  .app.c.un~  .buf.c.un~  .cmn.c.un~  .crc.c.un~  .cry.c.un~  .enl.c.un~  .hdl.c.un~  .hsh.c.un~  .log.c.un~  .main.c.un~  .net.c.un~  .rfc.c.un~  .rsa.c.un~  .scl.c.un~  .sel.c.un~  .sha1.c.un~  .sil.c.un~  .srl.c.un~  .std.c.un~  .stk.c.un~  .tgt.c.un~  .tml.c.un~  .trl.c.un~  .types.c.un~  aes.lo  api.c  api.lo  app.c  app.lo  buf.c  buf.lo  cmn.c  cmn.lo  crc.c  crc.lo  cry.c  cry.lo  enl.c  (+33 more)
mtx/src/.deps/: aes.Plo  api.Plo  app.Plo  buf.Plo  cmn.Plo  crc.Plo  cry.Plo  enl.Plo  fact.Plo  hdl.Plo  hsh.Plo  log.Plo  main.Po  net.Plo  rfc.Plo  rsa.Plo  scl.Plo  sel.Plo  sha1.Plo  sil.Plo  srl.Plo  std.Plo  stk.Plo  tgt.Plo  tml.Plo  trl.Plo  types.Plo
tg/: .gitignore  Makefile.am  ack.c  answer.c  auth.c  auth_key.c  buf.c  buf.h  cafextract.c  cafextract.h  channel.c  channel.h  chat.c  chat.h  connect.c  cpp_helper.h  database.c  database.h  deserialize.c  deserialize.h  deserialize_table.c  deserialize_table.h  dialogs.c  dialogs.h  encrypt.c  files.c  files.h  header.c  images.c  macro.h  messages.c  messages.h  methods.c  methods.h  net.c  net.h  ntp.c  ogg.c  peer.c  peer.h  (+20 more)
tl/: Makefile.am  aes.c  aes.h  api_layer.h  base64.h  buf.c  buf.h  cmn.c  cmn.h  crc.c  cry.c  cry.h  debug.h  deserialize.c  deserialize.h  deserialize_table.c  deserialize_table.h  gunzip.c  hsh.c  hsh.h  id.h  libtl.h  methods.c  methods.h  names.h  net.c  net.h  rsa.c  rsa.h  send_query.c  serialize.c  serialize.h  struct.h  tl.c  tl.h  tl_salt.c  tl_send.c  types.h
tl_generator/: Makefile.am  generator.c  mtproto_api.tl  tl_parser.c  tl_parser.h
tools/: pcm_to_opusogg.c  pcm_to_opusogg.h
transport/: ack.c  crc.c  crc.h  encrypt.c  header.c  net.c  net.h  queue.c  queue.h  send_query.c  transport.c  transport.h
