SUBDIRS = tl_generator mtx tl tg
ACLOCAL_AMFLAGS = -I m4

#bin_PROGRAMS = tgtest
#tgtest_SOURCES = test.c
#tgtest_LDADD = tg/libtg.la tl/libtl.la -lstdc++ -lsqlite3

# to compile for iOS 
#arm-apple-darwin11-clang -dynamiclib -o .libs/libtg.0.dylib  .libs/serialize.o .libs/deserialize.o .libs/deserialize_table.o .libs/methods.o .libs/tg.o   -lcrypto ../mtx/.libs/libmtx.a  -g -O2   -install_name  /usr/local/lib/libtg.0.dylib -compatibility_version 1 -current_version 1.0 -Wl,-single_module -lstdc++ -stdlib=libc++
